[✔] Fixed “basement” overlapping “roof”.

--- a/public/stylesheets/bundle/contour/common/theatre/roof/_backstage.css.sass
+++ b/public/stylesheets/bundle/contour/common/theatre/roof/_backstage.css.sass
@@ -18,7 +18,7 @@
         position: fixed
         right: 0
         top: 0
-        z-index: 110
+        z-index: 210
 
         .shell
           height: 32px
